--- a/Etapa 1/HTML/aula1306/semantica.html
+++ b/Etapa 1/HTML/aula1306/semantica.html
@@ -19,21 +19,20 @@
   <style>
     ol {
       display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 15px;
       list-style: none;
       margin: 0;
       padding: 0;
-    }
-
-    li {
-      padding: 5px;
     }
   </style>
 
 </head>
 
-<body>
+<body style="background-color: bisque; font-family: Arial, Helvetica, sans-serif;">
   <header>
-    <h1>Meu Site</h1>
+    <h1 style="color: brown; text-align: center;">Meu Site</h1>
     <nav aria-label="primaria">
       <ol>
         <li><a href="#">Home</a></li>
@@ -44,15 +43,15 @@
     </nav>
   </header>
 
-  <main>
+  <main style="background-color: rgba(255, 255, 255, 0.495); padding:  10px 20px; border-radius: 5px; margin: 10px auto; width: 80%;">
     <section>
-      <h2>Apresentação</h2>
+      <h2 style="color: darkred;">Apresentação</h2>
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum blanditiis accusamus voluptas dolorum placeat
         error, eligendi aspernatur dicta aliquam, nostrum cum laudantium, illum deserunt qui ad repudiandae quam quae!
         Tenetur cupiditate eum omnis culpa commodi iusto cum iure, quisquam minus.</p>
     </section>
     <section>
-      <h2>Carreira</h2>
+      <h2 style="color: darkred;">Carreira</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, nisi velit provident consequuntur porro animi
         eveniet beatae ducimus eligendi perspiciatis vero sunt quisquam mollitia debitis delectus possimus quis aliquid
         deserunt corporis, dolorum amet eius est ab aperiam? Consequatur impedit hic recusandae voluptatem veritatis
@@ -80,7 +79,7 @@
       </article>
     </section>
     <aside>
-      <h2>Minhas Redes Sociais</h2>
+      <h2 style="color: darkred;">Minhas Redes Sociais</h2>
       <nav>
         <ul>
           <li><a href="#">Facebook</a></li>
