--- a/Etapa 1/HTML/aula1306/index.html
+++ b/Etapa 1/HTML/aula1306/index.html
@@ -74,11 +74,13 @@
   <div>
     <aside>
       <h3>Links Úteis</h3>
-      <ul>
-        <li><a href="#">Ferramentas de SEO</a></li>
-        <li><a href="#">Cursos de Marketing</a></li>
-        <li><a href="#">Comunidade de Profissionais</a></li>
-      </ul>
+      <nav>
+        <ul>
+          <li><a href="#">Ferramentas de SEO</a></li>
+          <li><a href="#">Cursos de Marketing</a></li>
+          <li><a href="#">Comunidade de Profissionais</a></li>
+        </ul>
+      </nav>
     </aside>
     <aside>
       <h3>Contato</h3>
@@ -105,6 +107,7 @@
 - Dividi o conteúdo da 'main' em 'sections', pois melhora a semântica;
 - Dividi o conteúdo da última 'section' em 'articles', para delimitar os conteúdos independentes;
 - Troquei 'div' por 'aside' nos conteúdos adicionais;
+- Adicionei os links dentro de uma tag 'nav' para melhorar a semântica
 - Alterei 'div' por 'footer' no rodapé.
 Essas alterações melhoram a semântica do site e isso é de extrema importância para a acessibilidade de pessoas portadoras de deficiência.
 -->
