--- a/Etapa 1/HTML/aula1306/index.html
+++ b/Etapa 1/HTML/aula1306/index.html
@@ -9,9 +9,7 @@
 
 <body>
   <header>
-    <div>
-      <h1>Agência de Marketing Digital</h1>
-    </div>
+    <h1>Agência de Marketing Digital</h1>
     <nav aria-label="primaria">
       <ul>
         <li><a href="#">Home</a></li>
@@ -97,8 +95,8 @@
 </html>
 
 <!-- 
-- Retirei a div que estava envolvendo o conteúdo inteiro;
-- Adicionei uma tag 'header' envolvendo a 'div' do h1 e a 'nav' para separar o conteúdo inicial;
+- Retirei a div que estava envolvendo o conteúdo inteiro e a div que estava envolvendo o h1;
+- Adicionei uma tag 'header' envolvendo o h1 e a 'nav' para separar o conteúdo inicial;
 - Alterei a tag 'div' para 'nav' para indicar que se tratava de uma barra de navegação;
 - Adicionei um 'aria-label' na 'nav' para ajudar no leitor de tela;
 - Coloquei os links da 'nav' dentro da 'ul', pois acho que melhora a semântica no leitor de tela;
