--- a/Etapa 1/HTML/aula1306/index.html
+++ b/Etapa 1/HTML/aula1306/index.html
@@ -69,8 +69,7 @@
       </aside>
     </section>
   </main>
-  <div>
-    <aside>
+  <aside>
       <h3>Links Úteis</h3>
       <nav>
         <ul>
@@ -79,15 +78,14 @@
           <li><a href="#">Comunidade de Profissionais</a></li>
         </ul>
       </nav>
-    </aside>
-    <aside>
+  </aside>
+  <footer>
+    <section>
       <h3>Contato</h3>
       <p>Email: contato@agencia.com</p>
       <p>Telefone: (11) 98765-4321</p>
       <p>Endereço: Rua Exemplo, 123, São Paulo, SP</p>
-    </aside>
-  </div>
-  <footer>
+    </section>
     <p>&copy; 2024 Agência de Marketing Digital. Todos os direitos reservados.</p>
   </footer>
 </body>
