--- a/Etapa 1/CSS/aula1306/index.html
+++ b/Etapa 1/CSS/aula1306/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Introdução ao CSS</title>
   </head>
 
@@ -100,9 +104,15 @@
       <nav>
         <h3>Links Úteis</h3>
         <ul>
-          <li><a href="#">Ferramentas de SEO</a></li>
-          <li><a href="#">Cursos de Marketing</a></li>
-          <li><a href="#">Comunidade de Profissionais</a></li>
+          <li><a href="#"><span class="material-symbols-outlined">
+            handyman
+            </span> Ferramentas de SEO</a></li>
+          <li><a href="#"><span class="material-symbols-outlined">
+            full_coverage
+            </span> Cursos de Marketing</a></li>
+          <li><a href="#"><span class="material-symbols-outlined">
+            groups
+            </span> Comunidade de Profissionais</a></li>
         </ul>
       </nav>
     </aside>
