--- a/etapa-1/css/aula1706/textos.html
+++ b/etapa-1/css/aula1706/textos.html
@@ -13,9 +13,11 @@
   </section>
   <section class="secao2">
     <div class="quadrado1">Quadrado 1</div>
-    <div class="quadrado2"></div>
-    <div class="quadrado3"></div>
-    <div class="quadrado4"></div>
+    <div class="quadrado2">Quadrado 2</div>
+    <div class="quadrado3">Quadrado 3</div>
+    <div class="quadrado4">Quadrado 4
+      <div class="quadrado3">Quadrado 3</div>
+    </div>
   </section>
 </body>
 </html>
