Adicionei os arquivos referentes ao estudo de box model

--- a/etapa-1/css/aula1706/index.html
+++ b/etapa-1/css/aula1706/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>CSS</title>
 </head>
 <body>
@@ -12,6 +12,7 @@
   <p id="paragrafo">Mais um parágrafo...</p>
   <h2 class="destaque">Título 2</h2>
 
-  <a href="textos.html">Clique aqui para ir para outro arquivo da aula - CSS Textos</a>
+  <a href="textos.html">Clique aqui para ir para CSS Textos</a>
+  <a href="boxmodel.html">Clique aqui para ir para CSS Box Model</a>
 </body>
 </html>
