Criei os arquivos de estudo de sombras

--- a/etapa-1/css/aula1706/index.html
+++ b/etapa-1/css/aula1706/index.html
@@ -14,5 +14,6 @@
 
   <a href="textos.html">Clique aqui para ir para CSS Textos</a>
   <a href="boxmodel.html">Clique aqui para ir para CSS Box Model</a>
+  <a href="blog.html">Clique aqui para ir para Blog</a>
 </body>
 </html>
