--- a/etapa-1/css/aula1706/exercicio1.html
+++ b/etapa-1/css/aula1706/exercicio1.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/exercício1.css">
+    <link rel="stylesheet" href="css/exercicio1.css">
     <title>Exercício Prático de Seletores CSS</title>
 </head>
 <body>
