Criei os arquivos de flex box

--- a/etapa-1/css/aula1806/index.html
+++ b/etapa-1/css/aula1806/index.html
@@ -6,7 +6,9 @@
   <title>CSS</title>
 </head>
 <body>
-  <a href="flexbox.html">CSS - Flexbox</a>
-  <a href="landing-page.html">Landing Page</a>
+  <ul>
+    <li><a href="flexbox.html">CSS - Flexbox</a></li>
+    <li><a href="landing-page.html">Landing Page</a></li>
+  </ul>
 </body>
 </html>
