--- a/etapa-1/css/aula1806/flexbox.html
+++ b/etapa-1/css/aula1806/flexbox.html
@@ -7,6 +7,23 @@
   <title>Flex Box</title>
 </head>
 <body>
-  
+  <div class="container">
+    <div class="item-1">
+        <h3>Item 1</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, qui! Accusantium voluptas nobis quos distinctio pariatur nam laudantium hic magni.</p>
+    </div>
+    <div class="item-2">
+        <h3>Item 2</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, qui! Accusantium voluptas nobis quos distinctio pariatur nam laudantium hic magni.</p>
+    </div>
+    <div class="item-3">
+        <h3>Item 3</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, qui! Accusantium voluptas nobis quos distinctio pariatur nam laudantium hic magni.</p>
+    </div>
+    <div class="item-4">
+        <h3>Item 4</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, qui! Accusantium voluptas nobis quos distinctio pariatur nam laudantium hic magni.</p>
+    </div>
+</div>
 </body>
 </html>
