--- a/etapa-1/css/aula1806/index.html
+++ b/etapa-1/css/aula1806/index.html
@@ -9,6 +9,7 @@
   <ul>
     <li><a href="flexbox.html">CSS - Flexbox</a></li>
     <li><a href="landing-page.html">Landing Page</a></li>
+    <li><a href="exercicio-flexbox.html">Exercício Flexbox</a></li>
   </ul>
 </body>
 </html>
