--- a/etapa-1/css/index.html
+++ b/etapa-1/css/index.html
@@ -13,6 +13,7 @@
         <li><a href="aula1306/index.html">Aula 13.06</a></li>
         <li><a href="aula1706/index.html">Aula 17.06</a></li>
         <li><a href="aula1806/index.html">Aula 18.06</a></li>
+        <li><a href="aula1906/index.html">Aula 19.06</a></li>
       </ul>
     </nav>
   </main>
