--- a/etapa-1/css/aula1906/index.html
+++ b/etapa-1/css/aula1906/index.html
@@ -8,6 +8,8 @@
 <body>
   <ul>
     <li><a href="soulcode.html"></a>Ir para soulcode.html</li>
+    <li><a href="exercicio/exercicio1-fitcode.html">Exercício 1 - FitCode</a></li>
+    <li><a href="exercicio/exercicio2.html">Exercício 2</a></li>
   </ul>
 </body>
 </html>
