--- a/etapa-1/css/aula1906/exercicio/exercicio1-fitcode.html
+++ b/etapa-1/css/aula1906/exercicio/exercicio1-fitcode.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css-exercicios/fitcode.css">
   <link rel="stylesheet" href="css-exercicios/exercicio1.css">
-  <title>Document</title>
+  <title>FitCodet</title>
 </head>
 
 <body>
