Estilizei os índices

--- a/etapa-1/css/aula1806/index.html
+++ b/etapa-1/css/aula1806/index.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../../../css-global/index.css">
   <title>CSS</title>
 </head>
 <body>
+  <h2>Aula 18/06/2024</h2>
   <ul>
     <li><a href="flexbox.html">CSS - Flexbox</a></li>
     <li><a href="landing-page.html">Landing Page</a></li>
