--- a/etapa-1/css/aula1906/index.html
+++ b/etapa-1/css/aula1906/index.html
@@ -3,11 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../../../css-global/index.css">
+
   <title>Aula CSS - 19/06/2024</title>
 </head>
 <body>
+  <h2>Aula 19/06/2024</h2>
   <ul>
-    <li><a href="soulcode.html"></a>Ir para soulcode.html</li>
+    <li><a href="soulcode.html">Ir para soulcode.html</a></li>
     <li><a href="exercicio/exercicio1-fitcode.html">Exercício 1 - FitCode</a></li>
     <li><a href="exercicio/exercicio2.html">Exercício 2</a></li>
   </ul>
