--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css-global/index.css">
   <title>Bootcamp SoulCode</title>
 </head>
 <body>
   <main>
     <h1>Bootcamp SoulCode</h1>
+    <h2>Arquivos das aulas e exercícios</h2>
     <nav>
       <ul>
         <li><a href="etapa-1/index.html">Etapa 1</a></li>
