--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <ul>
         <li><a href="etapa-1/index.html">Etapa 1</a></li>
         <li><a href="etapa-2/index.html">Etapa 2</a></li>
+        <li><a href="links.html">Atividades Semanais</a></li>
       </ul>
     </nav>
   </main>
