--- a/etapa-1/index.html
+++ b/etapa-1/index.html
@@ -13,6 +13,7 @@
       <ul>
         <li><a href="css/index.html">CSS</a></li>
         <li><a href="html/index.html">HTML</a></li>
+        <li><a href="javascript/index.html">JavaScript</a></li>
       </ul>
     </nav>
   </main>
